--- a/Shelter/appsettings.json
+++ b/Shelter/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;database=ShelterDatabase;uid=root;pwd=epicodus;"
+    "DefaultConnection": "Server=localhost;Port=3306;database=Animals;uid=root;pwd=epicodus;"
   }
 }
